--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "nearest-finder",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "Find the closest country to your current location",
+  "author": "Masood Abdolian <m.abdolian@gmail.com>",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
