--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
     "downshift": "^9.0.6",
     "next": "14.2.3",
     "react": "^18",
